# Library

./: .gitignore  Books.csv  CMakeLists.txt  Makefile  README.md
Include/: Book.h  BookManager.h  LibrarySystem.h  Member.h  Role.h
plan/: README.txt  plan.drawio
src/: Book.cpp  BookManager.cpp  LibrarySystem.cpp  Member.cpp  main.cpp
